--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_KEY=base64:abmXChhnsqkDVk4bRPSZjxQW3Lg+nB0WWep3AMRoW2g=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://localhost:8000
-
+APP_DEMO=true
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
 APP_FAKER_LOCALE=id_ID
